--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>vue-simple-smooth-scroll</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>vue-simple-smooth-scroll</title>
+</head>
+<body>
+  <div id="app"></div>
+  <script src="/dist/smooth-scroll.js"></script>
+</body>
 </html>
